--- a/recipes/burger.html
+++ b/recipes/burger.html
@@ -4,7 +4,7 @@
         <title>Burger Recipe</title>
     </head>
     <body>
-        <h1>Burger</h1>
+        <h1>Burger Recipe</h1>
         <img src="../images/burger.webp" width="200px">
         <h2>Description</h2>
         <h3>Ingredients</h3>
