--- a/index.html
+++ b/index.html
@@ -6,7 +6,10 @@
 
     <body>
         <h1>Odin Recipes</h1>
-
-        <a href="recipes/burger.html">Burger</a>
+        <ul>
+            <li><a href="recipes/burger.html">Burger</a></li>
+            <li><a href="recipes/fries.html">French Fries</a></li>
+            <li><a href="recipes/pizza.html">Pizza</a></li>
+        </ul>
     </body>
 </html>
